# astron-rpa

./: .gitignore  BUILD_GUIDE.md  BUILD_GUIDE.zh.md  README.md  README.zh.md  build.bat
.github/workflows/: build-push-backend.yml
backend/openapi-service/: Dockerfile
backend/resource-service/: Dockerfile
backend/robot-service/: Dockerfile
docker/: docker-compose.yml
docker/volumes/atlas/: schema.hcl
docker/volumes/mysql/: schema.sql
docker/volumes/nginx/: default.conf
engine/: meta_json.py
engine/components/astronverse-ai/: config.yaml  meta.json
engine/components/astronverse-browser/: config.yaml  meta.json  meta_type.json
engine/components/astronverse-cua/: README.md  README.zh.md  config.yaml  example.py  meta.json  meta.py  pyproject.toml
engine/components/astronverse-cua/src/astronverse/: __init__.py
engine/components/astronverse-cua/src/astronverse/cua/: __init__.py  action_parser.py  computer_use.py
engine/components/astronverse-datatable/: config.yaml  meta.json  pyproject.toml
engine/components/astronverse-dialog/: meta.json
engine/components/astronverse-excel/: meta.json  meta_type.json
engine/components/astronverse-pdf/: config.yaml
engine/components/astronverse-smart/: meta.json
engine/components/astronverse-software/: config.yaml  meta.json
engine/servers/astronverse-executor/: pyproject.toml
engine/servers/astronverse-executor/src/astronverse/executor/: __init__.py  config.py  error.py  start.py
engine/servers/astronverse-executor/src/astronverse/executor/debug/: bdb.py  debug.py  debug_svc.py  package.py
engine/servers/astronverse-executor/src/astronverse/executor/flow/: flow.py  flow_svc.py  params.py  storage.py
engine/servers/astronverse-executor/src/astronverse/executor/flow/syntax/: ast.py  lexer.py  parser.py
engine/servers/astronverse-executor/src/astronverse/executor/flow/tpl/: package.tpl
engine/servers/astronverse-executor/src/astronverse/executor/utils/: utils.py
frontend/: .gitignore  README.md  README.zh.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/locales/: en-US.json  zh-CN.json
frontend/public/: client-sdk.js  client-sdk.js.map
resources/: conf.yaml
(+72 files in other folders)
