[project]
name = "astronverse-cua"
version = "1.0.1"
description = "astronverse-cua."
requires-python = ">=3.9"

dependencies = [
    "pyautogui",
    "pillow",
    "openai",
    "pyperclip",
]

[tool.uv.sources]
astronverse-actionlib = {path = "../../shared/astronverse-actionlib", editable = true}

[tool.hatch.build.targets.wheel]
packages = ["src/astronverse"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


